@@ -256,7 +256,7 @@ gimp_rc_load (GimpRc *rc)
   g_return_if_fail (GIMP_IS_RC (rc));
 
   if (rc->verbose)
-    g_print (_("Parsing '%s'\n"),
+    g_print ("Parsing '%s'\n",
              gimp_filename_to_utf8 (rc->system_gimprc));
 
   if (! gimp_config_deserialize_file (GIMP_CONFIG (rc),
@@ -269,7 +269,7 @@ gimp_rc_load (GimpRc *rc)
     }
 
   if (rc->verbose)
-    g_print (_("Parsing '%s'\n"),
+    g_print ("Parsing '%s'\n",
              gimp_filename_to_utf8 (rc->user_gimprc));
 
   if (! gimp_config_deserialize_file (GIMP_CONFIG (rc),
@@ -515,7 +515,7 @@ gimp_rc_save (GimpRc *rc)
   header = g_strconcat (top, rc->system_gimprc, bottom, NULL);
 
   if (rc->verbose)
-    g_print (_("Saving '%s'\n"),
+    g_print ("Writing '%s'\n",
              gimp_filename_to_utf8 (rc->user_gimprc));
 
   if (! gimp_config_serialize_to_file (GIMP_CONFIG (rc),
